--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 <div id="nhanvat" class="row members-list">
     <div class=" col col-third s-col-full mt-32 text-center">
         <p class="member-name">Bakugo Katsuki</p>
-      <img src="/assets/img/team/member1/Bakugo.jpg" alt="Midoriya Izuku" class="member-img">
+      <img src="./assets/img/team/member1/Bakugo.jpg" alt="Midoriya Izuku" class="member-img">
     </div>
     <div class=" col col-third s-col-full mt-32 text-center">
         <p class="member-name">Midoriya Izuku</p>
-      <img src="/assets/img/team/member1/Izuku_Midoriya_Costume_Gamma_Profile.png" alt="Midoriya Izuku" class="member-img">
+      <img src="./assets/img/team/member1/Izuku_Midoriya_Costume_Gamma_Profile.png" alt="Midoriya Izuku" class="member-img">
     </div>
     <div class=" col col-third s-col-full mt-32 text-center">
         <p class="member-name">Todoroki Shouto</p>
-      <img src="/assets/img/team/member1/Todori.jpg" alt="Midoriya Izuku" class="member-img">
+      <img src="./assets/img/team/member1/Todori.jpg" alt="Midoriya Izuku" class="member-img">
     </div>
 
     
@@ -104,7 +104,7 @@
                 <!-- places -->
                 <div class="row places-list mt-16">
                     <div class="col col-third s-col-full mt-16">
-                        <img src="/assets/img/places/places1.jpg" alt="New York" class="places-img">
+                        <img src="./assets/img/places/places1.jpg" alt="New York" class="places-img">
                         <div class="places-body">
                     <h3 class="places-heading">New York</h3>
                     <p class="places-time">Fri 27 Nov 2016</p>
@@ -113,7 +113,7 @@
                     </div>
                 </div> 
                 <div class="col col-third s-col-full mt-16">
-                    <img src="/assets/img/places/places2.jpg" alt="Paris" class="places-img">
+                    <img src="./assets/img/places/places2.jpg" alt="Paris" class="places-img">
                     <div class="places-body">
                 <h3 class="places-heading">New York</h3>
                 <p class="places-time">Sat 28 Nov 2016</p>
@@ -122,7 +122,7 @@
                 </div>
             </div> 
             <div class="col col-third s-col-full mt-16">
-                <img src="/assets/img/places/places3.jpg" alt="San Francisco" class="places-img">
+                <img src="./assets/img/places/places3.jpg" alt="San Francisco" class="places-img">
                 <div class="places-body">
             <h3 class="places-heading">New York</h3>
             <p class="places-time">Sun 29 Nov 2016</p>
@@ -168,7 +168,7 @@
     </div>
      <!-- End: ContaCT section -->
     <div id="map" class="map-section">
-        <img src="/assets/img/map.jpg" alt="Map">
+        <img src="./assets/img/map.jpg" alt="Map">
     </div>
 
     </div>
