--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psama</title>
-    <link rel="icon" type="images.ico" href="../assets/images.ico"/>
+    <link rel="icon" type="images.ico" href="./assets/images.ico"/>
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
-<link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
+<link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 
 </head>
 <body>
